# AK40-10-ROS2-Bridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
calibration/: AK40_friction_calibration_summary.md  result.md
config/: ak_motor_params.yaml  cable_control_params.yaml  cable_direct_torque_params.yaml  cable_pos_ref_params.yaml  cable_sine_ref_params.yaml  cable_square_ref_params.yaml  cable_torque_ctrl_params.yaml  cable_triangle_ref_params.yaml  slung_load_params.yaml
desgin_requirements/: friction_calibration.txt  requirements.txt
desgin_requirements/L1_sliding_mode/: BLSMC_design.md
include/ak_motor_driver/: ak40_codec.hpp  ak40_types.hpp  can_socket.hpp
launch/: ak_motor.launch.py  cable_control.launch.py  cable_direct_torque.launch.py  cable_pos_ref.launch.py  cable_sine_ref.launch.py  cable_square_ref.launch.py  cable_torque_ctrl.launch.py  cable_triangle_ref.launch.py  slung_load.launch.py
scripts/: setup_can_laptop.sh  setup_can_orin.sh
src/: ak40_codec.cpp  ak_motor_cable_control_node.cpp  ak_motor_node.cpp  cable_direct_torque_node.cpp  cable_pos_ref_node.cpp  cable_sine_ref_node.cpp  cable_square_ref_node.cpp  cable_torque_ctrl_node.cpp  cable_triangle_ref_node.cpp  can_socket.cpp  slung_load_node.cpp
